--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-prettier": "9.1.0",
     "framer-motion": "11.15.0",
     "lucide-react": "0.441.0",
+    "motion": "^11.15.0",
     "next": "14.2.11",
     "next-auth": "4.24.7",
     "next-themes": "0.3.0",
